# email-marketing

./: .gitignore  FULL_PROCESS.MD  PHASES_GUIDE.md  PLANE_1_ANALYSIS.md  PLANE_2_CONTEXT.md  PLANE_4_METRICS.md  PLANE_GUIDE.md  README.md  add_social_proof.md  cold_email_bandit_cursor_prompt.md  copywriting-style-prompts.md  cursor_bandit_prompt.md  frontend_revamp.md  lever-presets.md  levers_scenarios.MD  package-lock.json  package.json  social_proof_levers.md  social_proof_prompt_preview.md
bandit_mvp/: .gitignore  README.md  bandit.py  db.py  levers.py  renderer.py  requirements.txt  reward.py  run.py  service.py  synth_outcomes.sql
cold_email_bandit/: .gitignore  README.md  config.yaml  pyproject.toml
cold_email_bandit/app/: __init__.py  api.py  config.py  run_simulation.py  sweep.py
cold_email_bandit/app/bandit/: __init__.py  candidate_sampler.py  encoding.py  vw_policy.py
cold_email_bandit/app/dashboard/: __init__.py  cli_charts.py  index.html
cold_email_bandit/app/environment/: __init__.py  ground_truth.py  prospects.py  simulator.py
cold_email_bandit/app/metrics/: __init__.py  recovery.py  store.py  tracker.py
cold_email_bandit/app/planes/: __init__.py  context.py  deliverability.py  features.py  guardrails.py  outcomes.py
cold_email_bandit/app/rendering/: __init__.py  llm_renderer.py  mock_renderer.py  renderer.py
cold_email_bandit/tests/: conftest.py  test_environment.py  test_guardrails.py  test_objective.py  test_recovery.py  test_store_and_render.py
dataset_generator/: EXAMPLES_BY_SEGMENT.md  ai_copy.py  config.py  generate_dataset.py  (+4 more)
(+186 files in other folders)
