[project]
name = "cold-email-bandit"
version = "0.1.0"
description = "Self-learning cold email agent using a Vowpal Wabbit contextual bandit and a synthetic ground-truth environment."
requires-python = ">=3.11"
dependencies = [
    "vowpalwabbit>=9.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
